--- a/API/Components/Pages/Home.razor
+++ b/API/Components/Pages/Home.razor
@@ -8,7 +8,7 @@
 
 @* Page content *@
 <div class="container">
-    <h1 class="animated-title">Hello, Tobias!</h1>
+    <h1 class="animated-title">Hello, Kristen!</h1>
     <p class="intro-text">Have a great day and keep going!</p>
     <div class="card">
         <h2>Welcome to Your New Blazor App</h2>
