--- a/API/Components/Pages/Home.razor
+++ b/API/Components/Pages/Home.razor
@@ -8,11 +8,11 @@
 
 @* Page content *@
 <div class="container">
-    <h1 class="animated-title">Hello, Tobias!</h1>
-    <p class="intro-text">Have a great day and keep going!</p>
+    <h1 class="animated-title">Hello, Kristen!</h1>
+    <p class="intro-text">Have such a good day! Hope everything has been going alright today</p>
     <div class="card">
-        <h2>Welcome to Your New Blazor App</h2>
-        <p>Explore the wonderful world of Blazor and create interactive web UIs with ease.</p>
+        <h2>Welcome to your amazing New Blazor App</h2>
+        <p>Explore what Blazor has to offer and create interactive web UIs with ease.</p>
     </div>
 </div>
 
